--- a/NeuroApp/Storyboard/Quiz/Score.storyboard
+++ b/NeuroApp/Storyboard/Quiz/Score.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -10,15 +10,15 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Score Screen View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ScoreScreenViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="ScoreScreenViewController" customModule="NeuroApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Asq-Dk-t2Y">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Asq-Dk-t2Y">
                                 <rect key="frame" x="20" y="44" width="374" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
@@ -41,14 +41,14 @@
                                             <constraint firstAttribute="width" secondItem="xbM-zt-Bd4" secondAttribute="height" multiplier="8:9" id="wcy-gv-Fl5"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bik-u3-PkS" customClass="ScoreView" customModule="NeuroApp" customModuleProvider="target">
+                                    <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bik-u3-PkS" customClass="ScoreView" customModule="NeuroApp" customModuleProvider="target">
                                         <rect key="frame" x="131.5" y="0.0" width="111" height="125"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Bik-u3-PkS" secondAttribute="height" multiplier="8:9" id="Jh0-cw-1Ts"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sfg-Vf-kVy" customClass="ScoreView" customModule="NeuroApp" customModuleProvider="target">
+                                    <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sfg-Vf-kVy" customClass="ScoreView" customModule="NeuroApp" customModuleProvider="target">
                                         <rect key="frame" x="262.5" y="0.0" width="111.5" height="125"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
@@ -68,6 +68,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Button">
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="25"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="goHomeWithSender:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="JGS-gm-keJ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -87,10 +90,33 @@
                             <constraint firstItem="KpJ-Yb-PlI" firstAttribute="width" secondItem="5EZ-qb-Rvc" secondAttribute="width" multiplier="0.4" id="rCi-zT-JsA"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="averageScoreView" destination="KpJ-Yb-PlI" id="Jjr-Rv-rGg"/>
+                        <outlet property="textLabel" destination="Asq-Dk-t2Y" id="zT0-OY-7aU"/>
+                        <outletCollection property="scoreViews" destination="xbM-zt-Bd4" collectionClass="NSMutableArray" id="o3K-s8-9vB"/>
+                        <outletCollection property="scoreViews" destination="Bik-u3-PkS" collectionClass="NSMutableArray" id="bzf-v0-7uE"/>
+                        <outletCollection property="scoreViews" destination="sfg-Vf-kVy" collectionClass="NSMutableArray" id="oRn-BA-3Gu"/>
+                        <segue destination="DB9-MF-mqg" kind="show" identifier="ShowHomeViewController" id="GYC-kP-Qbu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <customObject id="2R9-tZ-Za3" customClass="ScoreScreenModuleInitializer" customModule="NeuroApp" customModuleProvider="target">
+                    <connections>
+                        <outlet property="scorescreenViewController" destination="Y6W-OH-hqX" id="DSY-Zb-XSG"/>
+                    </connections>
+                </customObject>
             </objects>
             <point key="canvasLocation" x="100.00000000000001" y="134.59821428571428"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="iQC-NL-3AJ">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="HomeViewController" storyboardName="Home" id="DB9-MF-mqg" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="tFH-Y7-DT3"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cw8-SD-ReS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="665" y="135"/>
         </scene>
     </scenes>
     <resources>
